first-pod/ingress/ingress_rules.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: cr4.contractroom.com
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-svc
          servicePort: 80
